add_executable(stack stack.cpp)
add_executable(queue queue.cpp)
add_executable(priority_queue priority_queue.cpp)
add_executable(string_view string_view.cpp)
add_executable(adapters_a adapters_a.cpp)
add_executable(adapters_c adapters_c.cpp)
add_executable(adapters_b adapters_b.cpp)
add_executable(adapters_d adapters_d.cpp)
add_executable(adapters_e adapters_e.cpp)