add_executable(a_containers a_containers.cpp)
add_executable(b_containers b_containers.cpp)
add_executable(d_containers d_containers.cpp)
add_executable(deque deque.cpp)
add_executable(list list.cpp)
add_executable(b_deque b_deque.cpp)
add_executable(forward_list forward_list.cpp)
add_executable(c_deque c_deque.cpp)
add_executable(unordered_map unordered_map.cpp)
add_executable(set set.cpp)
add_executable(d_list d_list.cpp)
add_executable(c_set c_set.cpp)
add_executable(d_map d_map.cpp)